______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.179:

* Generation of specification documentation:
  - Changed the style.css for the specdocs. It does not explicitly specify
    actual font families (e.g.  Arial, Verdana) anymore. Instead, it specifies
    logical font families (serif, sans-serif). These logical font families are
    mapped to actual font families by the browser.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.178:

* XINS/Java Common Library:
  - Refactored some method in the ExpiryFolder.

* XINS/Java Common Library:
  - ExpiryListener now also passes the folder in the expired method.

* Logdoc
  - Removed Logdoc related to the sessions.

* Build and release process:
  - Removed some unneeded "-prepare" targets.

* Generated build file:
  - Added a "-load-dtds" target.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.177:

This version includes several incompatibilities with the previous version:
  - All packages org.xins.util has been renamed to org.xins.common.
  - The package org.xins.types has been renamed to org.xins.common.types.
  - The <instance> elements in <impl-java> have now a APIImpl object passed
    in the constructor.
  - The session system has been removed from XINS.

* XINS/Java Server Framework:
  - New description for InvalidRequest result code and InvalidResponse
    result code.
  - Removed all code related to the sessions.
  - The shared instance now receive the APIImpl object in the constructor.

* XINS/Java Common Library:
  - Renamed the package org.xins.types to org.xins.common.types and the
    package org.xins.util to org.xins.common.
  - Added new methods in ExpiryFolder.

* XINS/Java Client Framework:
  - Changed the code to access the new package org.xins.common instead of
    org.xins.util and org.xins.types.