@@ -35,9 +35,6 @@
           url        CDATA #REQUIRED
 >
 <!ELEMENT impl-java (dependency*, instance*)>
-<!ATTLIST impl-java
-          mapping    CDATA #IMPLIED
->
 <!ELEMENT dependency EMPTY>
 <!ATTLIST dependency
           dir        CDATA #REQUIRED
