@@ -1,12 +1,9 @@
 <!--
- XINS Implementation DTD. This DTD should be added to the impl.xml file of the 
+ XINS Implementation DTD. This DTD should be added to the impl.xml file of the
  project by adding the following line at the top of the file :
 <!DOCTYPE impl PUBLIC "-//XINS//DTD Implementation 1.0//EN" "http://xins.sourceforge.net/dtd/impl_1_0.dtd">
 -->
 <!ELEMENT impl (dependency*, instance*)>
-<!ATTLIST impl
-          mapping    CDATA #REQUIRED
->
 <!ELEMENT dependency EMPTY>
 <!ATTLIST dependency
           dir        CDATA #REQUIRED
