@@ -28,15 +28,12 @@
 			<input addproperty="api.description"
 						 message="Please, enter the description of the new api:" />
 			<echo file="${{xml.file}}"><![CDATA[<?xml version="1.0" encoding="US-ASCII"?>
-<!DOCTYPE api PUBLIC "-//XINS//DTD XINS API 1.0 alpha//EN" "http://xins.sourceforge.net/dtd/api_1_0_alpha.dtd">
+<!DOCTYPE api PUBLIC "-//XINS//DTD XINS API 1.0//EN" "http://xins.sourceforge.net/dtd/api_1_0.dtd">
 
 <api name="]]>${api.name}<![CDATA[" owner="]]>${user.name}<![CDATA["
 rcsversion="$]]><![CDATA[Revision$" rcsdate="$]]><![CDATA[Date$">
 
 	<description>]]>${api.description}<![CDATA[</description>
-
-	<impl-java mapping="/">
-	</impl-java>
 
 </api>]]></echo>
 			<echo message="Don't forget to add &lt;api name=&quot;${{api.name}}&quot; /&gt; to the xins-project.xml file." />
@@ -47,16 +44,13 @@ rcsversion="$]]><![CDATA[Revision$" rcsdate="$]]><![CDATA[Date$">
 						 message="Please, enter the name of the api:" />
 			<input addproperty="function.name"
 						 message="Please, enter the name of the new function:" />
-			<available property="xml.file"
-			           file="{$specsdir}/${{api.name}}/api.xml"
-			           value="{$specsdir}/${{api.name}}/${{function.name}}.fnc" />
 			<property name="xml.file" value="apis/${{api.name}}/spec/${{function.name}}.fnc" />
 			<available property="xml.exists" file="${{xml.file}}" />
 			<fail message="The file ${{xml.file}} already exists!" if="xml.exists" />
 			<input addproperty="function.description"
 						 message="Please, enter the description of the new function:" />
 			<echo file="${{xml.file}}"><![CDATA[<?xml version="1.0" encoding="US-ASCII"?>
-<!DOCTYPE function PUBLIC "-//XINS//DTD Function 1.0 alpha//EN" "http://xins.sourceforge.net/dtd/function_1_0_alpha.dtd">
+<!DOCTYPE function PUBLIC "-//XINS//DTD Function 1.0//EN" "http://xins.sourceforge.net/dtd/function_1_0.dtd">
 
 <function name="]]>${function.name}<![CDATA["
 rcsversion="$]]><![CDATA[Revision$" rcsdate="$]]><![CDATA[Date$">
@@ -72,16 +66,13 @@ rcsversion="$]]><![CDATA[Revision$" rcsdate="$]]><![CDATA[Date$">
 						 message="Please, enter the name of the api:" />
 			<input addproperty="rcd.name"
 						 message="Please, enter the name of the new result code:" />
-			<available property="xml.file"
-			           file="{$specsdir}/${{api.name}}/api.xml"
-			           value="{$specsdir}/${{api.name}}/${{rcd.name}}.rcd" />
 			<property name="xml.file" value="apis/${{api.name}}/spec/${{rcd.name}}.rcd" />
 			<available property="xml.exists" file="${{xml.file}}" />
 			<fail message="The file ${{xml.file}} already exists!" if="xml.exists" />
 			<input addproperty="rcd.description"
 						 message="Please, enter the description of the new result code:" />
 			<echo file="${{xml.file}}"><![CDATA[<?xml version="1.0" encoding="US-ASCII"?>
-<!DOCTYPE resultcode PUBLIC "-//XINS//DTD Result Code 1.0 alpha//EN" "http://xins.sourceforge.net/dtd/resultcode_1_0_alpha.dtd">
+<!DOCTYPE resultcode PUBLIC "-//XINS//DTD Result Code 1.0//EN" "http://xins.sourceforge.net/dtd/resultcode_1_0.dtd">
 
 <resultcode name="]]>${rcd.name}&quot; value=&quot;${rcd.name}<![CDATA["
 rcsversion="$]]><![CDATA[Revision$" rcsdate="$]]><![CDATA[Date$">
@@ -97,16 +88,13 @@ rcsversion="$]]><![CDATA[Revision$" rcsdate="$]]><![CDATA[Date$">
 						 message="Please, enter the name of the api:" />
 			<input addproperty="type.name"
 						 message="Please, enter the name of the new type:" />
-			<available property="xml.file"
-			           file="{$specsdir}/${{api.name}}/api.xml"
-			           value="{$specsdir}/${{api.name}}/${{type.name}}.typ" />
 			<property name="xml.file" value="apis/${{api.name}}/spec/${{type.name}}.typ" />
 			<available property="xml.exists" file="${{xml.file}}" />
 			<fail message="The file ${{xml.file}} already exists!" if="xml.exists" />
 			<input addproperty="type.description"
 						 message="Please, enter the description of the new type:" />
 			<echo file="${{xml.file}}"><![CDATA[<?xml version="1.0" encoding="US-ASCII"?>
-<!DOCTYPE type PUBLIC "-//XINS//DTD Type 1.0 alpha//EN" "http://xins.sourceforge.net/dtd/type_1_0_alpha.dtd">
+<!DOCTYPE type PUBLIC "-//XINS//DTD Type 1.0//EN" "http://xins.sourceforge.net/dtd/type_1_0.dtd">
 
 <type name="]]>${type.name}<![CDATA[" extends="_text"
 rcsversion="$]]><![CDATA[Revision$" rcsdate="$]]><![CDATA[Date$">
@@ -120,24 +108,19 @@ rcsversion="$]]><![CDATA[Revision$" rcsdate="$]]><![CDATA[Date$">
 		<target name="create-logdoc" description="Generates a new logdoc file for the API.">
 			<input addproperty="api.name"
 						 message="Please, enter the name of the api:" />
-			<available property="logdoc.dir"
-			           file="{$specsdir}/${{api.name}}/api.xml"
-			           value="src/logdoc/${{api.name}}" />
-			<property name="logdoc.dir" value="apis/${{api.name}}/impl" />
-			<property name="xml.file" value="${{logdoc.dir}}/log.xml" />
-			<property name="xml.file2" value="${{logdoc.dir}}/translation-bundle-en_US.xml" />
+			<property name="xml.file" value="apis/${{api.name}}/spec/impl/log.xml" />
+			<property name="xml.file2" value="apis/${{api.name}}/spec/impl/translation-bundle-en_US.xml" />
 			<available property="xml.exists" file="${{xml.file}}" />
 			<available property="xml.exists2" file="${{xml.file2}}" />
 			<fail message="The file ${{xml.file}} already exists!" if="xml.exists" />
 			<fail message="The file ${{xml.file2}} already exists!" if="xml.exists2" />
-			<mkdir dir="${{logdoc.dir}}" />
 			<property name="domain">
 				<xsl:attribute name="value">
 					<xsl:value-of select="document($project_file)/project/@domain" />
 				</xsl:attribute>
 			</property>
 			<echo file="${{xml.file}}"><![CDATA[<?xml version="1.0" encoding="US-ASCII"?>
-<!DOCTYPE log PUBLIC "-//XINS//DTD XINS Logdoc 1.0 alpha//EN" "http://xins.sourceforge.net/dtd/log_1_0_alpha.dtd">
+<!DOCTYPE log PUBLIC "-//XINS//DTD XINS Logdoc 1.0//EN" "http://xins.sourceforge.net/dtd/log_1_0.dtd">
 
 <log default-locale="en_US" domain="]]>${domain}.${api.name}.api<![CDATA[">
 
@@ -163,7 +146,7 @@ rcsversion="$]]><![CDATA[Revision$" rcsdate="$]]><![CDATA[Date$">
 </log>
 ]]></echo>
 			<echo file="${{xml.file2}}"><![CDATA[<?xml version="1.0" encoding="US-ASCII"?>
-<!DOCTYPE translation-bundle PUBLIC "-//XINS//DTD XINS Translation Bundle 1.0 alpha//EN" "http://xins.sourceforge.net/dtd/translation-bundle_1_0_alpha.dtd">
+<!DOCTYPE translation-bundle PUBLIC "-//XINS//DTD XINS Translation Bundle 1.0//EN" "http://xins.sourceforge.net/dtd/translation-bundle_1_0.dtd">
 
 <translation-bundle>
 	<translation entry="10000">Starting the initialisation of the <value-of-param name="functionName" /> function.</translation>
