@@ -934,8 +934,14 @@
 				</target>
 
 				<target name="client-{$api}"
-				        depends="jar-{$api}, javadoc-capi-{$api}"
-				        description="Generates the Javadoc API docs for the client side and the client jar file for the '{$api}' API stubs">
+				        depends="jar-{$api}, javadoc-capi-{$api}, specdocs-{$api}"
+				        description="Generates the Javadoc API docs for the client side and the client jar file for the '{$api}' API stubs and zip the result.">
+					<zip destfile="{$builddir}/specdocs/{$api}/{$api}-client.zip">
+						<fileset dir="{$builddir}/capis" includes="{$api}-capi.jar" />
+						<zipfileset dir="{$builddir}/javadoc-capi/{$api}" prefix="javadoc" />
+						<zipfileset dir="{$builddir}/java-capi/{$api}" prefix="java" />
+						<zipfileset dir="{$builddir}/specdocs/{$api}" excludes="{$api}-client.zip" prefix="specdocs" />
+					</zip>
 				</target>
 
 				<target name="all-{$api}"
